--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "jarallax": "^2.2.1",
+    "motion": "^11.15.0",
+    "next": "14.2.17",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.17"
+    "react-icons": "^5.4.0",
+    "react-use-measure": "^2.1.1",
+    "sass": "^1.83.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "@types/react-dom": "^18",
+    "typescript": "^5"
   }
 }
