--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/image-url": "^1.1.0",
     "jarallax": "^2.2.1",
     "motion": "^11.15.0",
     "next": "14.2.17",
+    "next-sanity": "^9.8.30",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
