--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@sanity/image-url": "^1.1.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.7.1",
     "jarallax": "^2.2.1",
     "motion": "^11.15.0",
     "next": "14.2.17",
