--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
+    "react-responsive": "^10.0.0",
     "react-use-measure": "^2.1.1",
     "sass": "^1.83.0"
   },
