--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.2.0",
     "@react-email/components": "^0.0.31",
     "@sanity/image-url": "^1.1.0",
     "@tsparticles/react": "^3.0.0",
