--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.7.1",
     "jarallax": "^2.2.1",
+    "lenis": "^1.2.3",
     "motion": "^11.15.0",
     "next": "14.2.17",
     "next-sanity": "^9.8.30",
