--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -16,11 +16,11 @@
     "@tsparticles/slim": "^3.7.1",
     "lenis": "^1.2.3",
     "motion": "^11.15.0",
-    "next": "14.2.17",
+    "next": "15.4.4",
     "next-sanity": "^9.8.30",
     "nodemailer": "^6.9.16",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-icons": "^5.4.0",
     "react-responsive": "^10.0.0",
     "react-use-measure": "^2.1.1",
@@ -29,8 +29,12 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6"
   }
 }
