--- a/package.json
+++ b/package.json
@@ -6,19 +6,26 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate:types": "PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:types"
   },
   "dependencies": {
+    "@payloadcms/db-mongodb": "^3.49.0",
+    "@payloadcms/next": "^3.49.0",
+    "@payloadcms/payload-cloud": "^3.49.0",
+    "@payloadcms/richtext-lexical": "^3.49.0",
     "@portabletext/react": "^3.2.0",
     "@react-email/components": "^0.0.31",
     "@sanity/image-url": "^1.1.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.7.1",
+    "graphql": "^16.11.0",
     "lenis": "^1.2.3",
     "motion": "^11.15.0",
     "next": "15.4.4",
     "next-sanity": "^9.8.30",
     "nodemailer": "^6.9.16",
+    "payload": "^3.49.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.4.0",
@@ -36,5 +43,6 @@
   "overrides": {
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6"
-  }
+  },
+  "type": "module"
 }
