--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate:types": "PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:types"
+    "generate:types": "PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:types",
+    "generate:importmap": "PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:importmap"
   },
   "dependencies": {
     "@payloadcms/db-mongodb": "^3.49.0",
     "@payloadcms/next": "^3.49.0",
     "@payloadcms/payload-cloud": "^3.49.0",
     "@payloadcms/richtext-lexical": "^3.49.0",
+    "@payloadcms/storage-s3": "^3.49.0",
     "@react-email/components": "^0.0.31",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.7.1",
